--- a/app/src/main/res/layout/fragment_mommy_valid.xml
+++ b/app/src/main/res/layout/fragment_mommy_valid.xml
@@ -138,7 +138,7 @@
         android:ellipsize="end"
         android:fontFamily="@font/poppins_reguler"
         android:hint="Ketik lokasi ibu"
-        android:inputType="text"
+        android:inputType="textCapWords"
         android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
