--- a/app/src/main/res/layout/fragment_preg_or_no.xml
+++ b/app/src/main/res/layout/fragment_preg_or_no.xml
@@ -33,6 +33,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.362" />
+    <TextView
+        android:id="@+id/tv_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_quest"
+        android:text="location" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_mom_pregnant"
