--- a/app/src/main/res/layout/activity_asi_journal.xml
+++ b/app/src/main/res/layout/activity_asi_journal.xml
@@ -61,10 +61,22 @@
 
         </RelativeLayout>
 
+        <Button
+            android:id="@+id/btn_save_journal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/simpan"
+            android:layout_marginTop="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/rv_asi"
+            app:layout_constraintTop_toBottomOf="@id/relativeBackground"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_asi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
