--- a/app/src/main/res/layout/item_rv_imunisasi.xml
+++ b/app/src/main/res/layout/item_rv_imunisasi.xml
@@ -24,30 +24,42 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/title_asi"
+                android:id="@+id/title_imunisasi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_bold"
                 android:textColor="@color/prime"
                 android:textSize="18sp"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:text="ASI Eksklusif Bulan 1" />
+                tools:text="Imunisasi Bulan 1" />
 
             <TextView
-                android:id="@+id/desc_time"
+                android:id="@+id/title_jenis_imunisasi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/title_asi"
+                android:layout_below="@+id/title_imunisasi"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="5dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="@color/prime"
+                android:textSize="16sp"
+                android:text="@string/jenis_imunisasi" />
+
+            <TextView
+                android:id="@+id/tv_jenis_imunisasi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title_jenis_imunisasi"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="20dp"
                 android:fontFamily="@font/poppins_reguler"
                 android:textColor="@color/prime"
                 android:textSize="14sp"
-                tools:text="Diisi tanggal 23 Sep 2021" />
+                tools:text="Hepatitis\nRubella" />
 
 
             <ImageView
