Improve search bar in recipe feature

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,9 +55,9 @@
                 android:layout_below="@id/tv_welcome"
                 android:layout_marginStart="25dp"
                 android:fontFamily="@font/poppins_medium"
+                android:text="Ibu !"
                 android:textColor="@color/white"
-                android:textSize="20sp"
-                android:text="Ibunya Annisa" />
+                android:textSize="20sp" />
 
             <ImageView
                 android:id="@+id/iv_mom"
