--- a/app/src/main/res/layout/activity_pregnant_journal.xml
+++ b/app/src/main/res/layout/activity_pregnant_journal.xml
@@ -63,6 +63,54 @@
 
         </RelativeLayout>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/rv_mom_nutrition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/prime"
+            android:elevation="20dp"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/relativeBackground">
+            <RelativeLayout
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/prime"
+                android:elevation="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/relativeBackground">
+
+                <ImageView
+                    android:id="@+id/iv_preg"
+                    android:layout_width="50dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/desainibu1" />
+
+                <TextView
+                    android:id="@+id/tv_mom_pregnant"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_toEndOf="@+id/iv_preg"
+                    android:fontFamily="@font/poppins_medium"
+                    android:text="@string/nutrisi_ibu_hamil"
+                    android:textColor="@color/ColorWhiteNote"
+                    android:textSize="15sp" />
+
+            </RelativeLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
         <TextView
             android:id="@+id/tv_title_chart_pregnant"
             android:layout_width="match_parent"
@@ -71,7 +119,8 @@
             android:textColor="@color/prime_dark"
             android:fontFamily="@font/poppins_semibold"
             android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/relativeBackground"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/rv_mom_nutrition"
             />
 
         <com.github.mikephil.charting.charts.LineChart
