--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -144,12 +144,12 @@
                     android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tv_title_detect"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="23dp"
-                    android:layout_alignParentEnd="true"
-                    android:textSize="12sp"
                     android:fontFamily="@font/poppins_reguler"
-                    android:text="@string/desc_detect"/>
+                    android:text="@string/desc_detect"
+                    android:textSize="12sp" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
