--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -33,20 +33,35 @@
         app:layout_constraintTop_toBottomOf="@id/iv_mom"
         android:text="Edit Profil" />
 
-    <androidx.appcompat.widget.SwitchCompat
+    <androidx.cardview.widget.CardView
         android:id="@+id/switch1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:textSize="15sp"
-        android:textColor="@color/prime"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/hidupkan_notifikasi"
-        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile"
-        android:textOff="ON"
-        android:textOn="OFF"/>
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_margin="25dp"
+        app:cardBackgroundColor="@color/pink_baby"
+        app:cardCornerRadius="10dp"
+        android:elevation="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_edit_profile">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/poppins_reguler"
+                android:text="@string/hidupkan_notifikasi"
+                android:textAlignment="center"
+                android:textColor="@color/prime" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_name"
