--- a/app/src/main/res/layout/activity_nutrisi_hamil.xml
+++ b/app/src/main/res/layout/activity_nutrisi_hamil.xml
@@ -68,7 +68,7 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_recipes"
+        android:id="@+id/rv_nutrition"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
